--- a/src/Task.css
+++ b/src/Task.css
@@ -10,10 +10,14 @@
     width: 100%;
     display: flex;
     align-items: center;
-    background-color: rgb(12, 85, 88);
-    margin-bottom: 0.8em;
+    background-color: rgb(4, 68, 70);
+    margin: 0.6em 0;
     padding: 0.5em 1em;
     position: relative;
+}
+
+.task:hover {
+    background-color: rgb(6, 91, 94);
 }
 
 #task-title {
