--- a/src/TodoApp.css
+++ b/src/TodoApp.css
@@ -10,16 +10,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 #app-title {
     font-size: 2.5rem;
     margin: 0.5em 0 1.7em 0;
-    color:rgb(14, 14, 14);
-    background-color: rgb(243, 175, 3);
+    color:rgb(252, 251, 251);
+    background-color: rgb(181, 8, 11);
     padding: 0.1em 1.5em 0.2em;
     border-radius: 1rem;
     border: 2px solid rgb(85, 83, 83);
+    box-shadow: 0 0 5px 3px rgb(236, 190, 117);
 }
 
 .create-todo {
@@ -41,13 +43,49 @@
     font-size: 1.8rem;
     margin-bottom: 0.5em;
     background-color: black;
-    padding: 0.1em 1em 0.2em;
+    padding: 0.2em 1em 0.3em;
     border-radius: 1em;
+    box-shadow: 0 0 10px 1px;
+}
+
+.task-count {
+    display: flex;
+    align-items: center;
+}
+
+.task-count p {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 0.5em;
 }
 
 #total-tasks {
-    font-size: 1.2rem;
-    font-weight: bold;
     color: rgb(8, 4, 122);
-    margin-bottom: 0.5em;
+    margin-right: 1.5em;
+}
+
+#pending-tasks {
+    color: rgb(188, 4, 32);
+}
+
+.task-div {
+    width: 100%;
+    height: 50vh;
+    overflow-y: scroll;
+}
+
+.task-div::-webkit-scrollbar {
+    width: 10px;
+    background: transparent;
+}
+
+.task-div::-webkit-scrollbar-thumb {  
+    background-color: transparent; 
+    border-radius: 30px;
+    border: 5px solid transparent;
+    background-clip: content-box;
+}
+
+.task-div::-webkit-scrollbar-thumb:hover {
+    background: rgb(237, 203, 203);
 }
