--- a/src/Task.css
+++ b/src/Task.css
@@ -27,14 +27,14 @@
     margin-right: 4rem;
 }
 
-#task-btn {
+/* #task-btn {
     background-color: rgb(81, 79, 79);
     color: white;
     padding: 0.3em 0.5em;
     font-size: 1rem;
     border-radius: 5px;
     border: 0.2px solid gray;
-}
+} */
 
 .update-delete-btns {
     position: absolute;
@@ -49,6 +49,7 @@
     border: 0.1px solid gray;
     margin-right: 0.2em;
     cursor: pointer;
+    transition: 0.5s;
 }
 
 #update-btn {
@@ -65,6 +66,14 @@
 
 #complete-btn:hover {
     background-color: rgb(8, 170, 8);
+}
+
+#edit-btn {
+    background-color: mediumblue;
+}
+
+#edit-btn:hover {
+    background-color: rgb(4, 4, 163);
 }
 
 #delete-btn {
